--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@
   padding: 0;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+
+
+.ant-modal .ant-modal-content.ant-modal-content {
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+
