--- a/src/Pages/MainHomePage/BookingModal/style.css
+++ b/src/Pages/MainHomePage/BookingModal/style.css
@@ -1,42 +1,62 @@
 .inlinePickerContainer {
-    display: flex;
-    justify-content: space-between;
-  }
+  display: flex;
+  justify-content: space-between;
+}
+
+.inlinePicker {
+  display: inline-block;
+  margin-right: 20px;
+}
+.inlinePickerContainer {
+  width:300px;
+}
+.input_items {
+  display: "flex";
+  align-items: center;
+  margin-left:90px;
+  margin-bottom: 24px;
   
-  .inlinePicker {
-    display: inline-block;
-    margin-right: 20px;
-  }
-  .inlinePickerContainer {
-    width:300px;
-  }
-  .input_items {
-    display: "flex";
-    align-items: center;
-    margin-left:90px;
-    margin-bottom: 24px;
-    
-  } 
- .btns button{
-  width: 420px;
-  margin-top: 270px;
-  height: 50px;
-  padding-bottom: 0;
- }
- .btns button p {
-  font-size: 17px;
- }
- /* .btnForm {
-  width:"400px";
-  position:"relative";
-  top:"120px";
-  left:"8px";
-  background-color:"#4F4A7B"
- }
- .btForm {
-  width:"100px";
-  position:"relative";
-  top:"120px";
-  left:"150px";
-  background-color:"#4F4A7B";
- } */
+} 
+.btns button{
+width: 300px;
+margin-top: 270px;
+height: 50px;
+padding-bottom: 0;
+}
+.btns button p {
+font-size: 17px;
+}
+.select {
+height: 42px;
+}
+.selects {
+height: 42px;
+width: 400px;
+}
+.selectDate {
+width:170px;
+margin-right: 5px;
+}
+.selectTime {
+width:170px;
+}
+.area {
+height: 100px;
+}
+.form-container {
+display: flex;
+flex-direction: column;
+height: 100%; 
+position: relative; 
+}
+
+.form-item {
+flex: 1; 
+}
+.form-footer {
+margin-top: 310px;
+}
+.form-footer Button {
+width: 300px;
+height: 50px;
+}
